--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 
 
   <div>
-    <form>
+    
       <input type="text" id="commentInput" placeholder="Add a comment...">
-      <button type="button" id ="button" onclick="addComment()">Submit</button>
-    </form>
+      <ul id ="commentList"></ul>
+    
   </div>
   
 
